packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
/* ... */
@keyframes shimmer {
  100% {
    transform: translateX(100%);
  }
}

div#page_menu_popups {
  margin-right: $spacing;

  .confirm_container,
  .message_container {
    position: static;
    padding: 0;

    .confirm_popup {
      padding: 16px;
      background-color: $headline-color;
      margin-bottom: $spacing;
      box-shadow: none;

      button.confirm_question,
      button.confirm_success,
      button.confirm_warning {
        margin-left: 0px;
      }

      button.confirm_question {
        &,
        &:active {
          color: $font-color-light-bg;
          background-color: $color-state-1-background;
          border-color: $color-state-1-background;
        }

        &:hover {
          background-color: color.adjust($color-state-1-background, $lightness: -5%);
          border-color: color.adjust($color-state-1-background, $lightness: -5%);
        }
      }

      button.confirm_warning {
        &,
        &:active {
          color: $white;
          background-color: color.adjust($color-state-2-background, $lightness: -5%);
          border-color: color.adjust($color-state-2-background, $lightness: -5%);
        }

        &:hover {
          background-color: $color-state-2-background;
          border-color: $color-state-2-background;
        }
      }

      button.confirm_success {
        &,
        &:active {
          color: $font-color-light-bg;
          background-color: $success-dimmed;
          border-color: $success-dimmed;
        }

        &:hover {
          background-color: $success;
          border-color: $success;
        }
      }
    }
  }

  .confirm_icon,
  .message_icon {
    position: absolute;
    width: 25px;
    height: 100%;
    background-color: $success-dimmed;
    border: 0;
    border-radius: $border-radius-left;
    margin: 0;
    font-size: 7px;
    font-weight: $font-weight-bold;
    color: $font-color-light-bg;

    &.confirm_question {
      background-color: $yellow;
      border-color: $yellow;
    }

    &.confirm_warning {
      color: $white;
      background-color: $color-state-2-background;
      border-color: $color-state-2-background;
    }

    &.confirm_success,
    &.message_success {
      background-color: $success;
      border-color: $success;
    }
  }

  .message_content {
    text-align: left;
    padding-left: 15px;
  }

  .message_close {
    position: absolute;
    top: 25%;
    font-size: 20px;
  }

  .confirm_title,
  .confirm_content {
    color: $font-color;
    font-size: $font-size-large;
    padding: 0;
    text-align: left;

    table {
      margin-left: -3px;

      &:before {
        content: '';
        display: block;
        margin-top: 5px;
      }
    }
  }

  .confirm_title {
    margin: 0 25px 0px;
    font-weight: $font-weight-bold;
  }

  .confirm_content,
  .message_content {
    margin: 5px 25px 0px;

    div.confirm_info,
    div.confirm_block {
      margin-top: 0.5 * $spacing;
    }
  }

  .confirm_actions {
    justify-content: flex-start;
    margin: $spacing 25px 0;
  }
}
/* ... */

